--- a/src/styles/choices.scss
+++ b/src/styles/choices.scss
@@ -3,7 +3,7 @@
 ===============================*/
 
 $choices-selector: 'choices' !default;
-$choices-font-size-lg: 16px !default;
+$choices-font-size-lg: 16px !default
 $choices-font-size-md: 14px !default;
 $choices-font-size-sm: 12px !default;
 $choices-guttering: 24px !default;
